MHWC-134 - LV - Content to be changed due to FOPs revision

--- a/docroot/sites/all/themes/hwc_frontend/less/header.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/header.less
@@ -611,39 +611,36 @@ header.navbar-default{
 				    display: none;
 				}
 			}
-			a[title*="EU-OSHA"]{
+			a:nth-child(2){
 				-webkit-transition: all 0.3s;
+			    -moz-transition: all 0.3s;
+			    -ms-transition: all 0.3s;
+			    -o-transition: all 0.3s;
+			    transition: all 0.3s;
+		    	display: inline-block;
+			    width: 220px;
+			    height: 83px;
+			    float: left;
+			    display: flex;
+    			align-items: center;
+    			padding-top: 5px;
+				img.pull-left{
+					-webkit-transition: all 0.3s;
 				    -moz-transition: all 0.3s;
 				    -ms-transition: all 0.3s;
 				    -o-transition: all 0.3s;
 				    transition: all 0.3s;
-			    	background-image: url("/sites/all/themes/hwc_frontend/images/header/EU-OSHA-en.png");
-			    	display: inline-block;
 				    width: 220px;
-				    height: 70px;
-				    float: left;
-				    background-repeat: no-repeat;
-				    background-size: 206px;
-				    margin-top: 6px;
-				img.pull-left{
-					-webkit-transition: all 0.3s;
-					    -moz-transition: all 0.3s;
-					    -ms-transition: all 0.3s;
-					    -o-transition: all 0.3s;
-					    transition: all 0.3s;
-					    width: 160px !important;
-    					height: 95px !important;
-					    margin-top: 0px !important;
-					    display: none;
-					   
+    				height: 70px !important;				
+				    margin-top: 0px !important;
 				}
 			}
 			img[alt*="EU logo"]{
 				-webkit-transition: all 0.3s;
-					    -moz-transition: all 0.3s;
-					    -ms-transition: all 0.3s;
-					    -o-transition: all 0.3s;
-					    transition: all 0.3s;
+			    -moz-transition: all 0.3s;
+			    -ms-transition: all 0.3s;
+			    -o-transition: all 0.3s;
+			    transition: all 0.3s;
 				padding-top: 42px !important;
 			    padding-bottom: 0px !important;
 			    padding-right: 0em !important;
@@ -653,10 +650,10 @@ header.navbar-default{
 			}
 			.header-text{
 				-webkit-transition: all 0.6s;
-					    -moz-transition: all 0.6s;
-					    -ms-transition: all 0.6s;
-					    -o-transition: all 0.6s;
-					    transition: all 0.6s;
+			    -moz-transition: all 0.6s;
+			    -ms-transition: all 0.6s;
+			    -o-transition: all 0.6s;
+			    transition: all 0.6s;
 				font-size: 1.5em !important;
 			    width: 300px !important;
 			    padding-top: 0.5em !important;
