REL-1844 RELEASE PROD HWC20 - 22/07/2020

--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -9001,6 +9001,9 @@ body.page-node-253 #block-hwc-partner-hwc-partner-back-to-private-zone .breadcru
   .front-page .go-to-anchor {
     display: none !important;
   }
+  html:lang(sl) .page-campaign-partners-enterprise-europe-network .page_title .page-header {
+    max-width: 600px;
+  }
 }
 @media (max-width: 1865px) {
   html:lang(bg) header.navbar-default .navbar-collapse nav ul.menu > li,
@@ -10538,6 +10541,9 @@ body.page-node-253 #block-hwc-partner-hwc-partner-back-to-private-zone .breadcru
   }
   body.front-page .main-container #block-hwc-homepage-hwc-homepage-news-events .before-the-campaign .content-box-before .box-before:nth-child(2) .box-before.events .view-frontpage-events .view-content > div:last-child {
     border-bottom: 0;
+  }
+  html:lang(sl) .page-campaign-partners-enterprise-europe-network .page_title .page-header {
+    max-width: 100%;
   }
   .node-type-priority-area .region-content #block-hwc-priority-areas .node-pa-highlights .field.field-name-field-image,
   .node-type-priority-area .region-content #block-hwc-priority-areas .node-news .field.field-name-field-image {
