--- a/docroot/sites/all/themes/hwc_frontend/less/header.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/header.less
@@ -447,6 +447,10 @@ header.navbar-default{
 	}
 }
 
+header.navbar-default .campaigns-header .navbar-header img:nth-child(1) {
+    margin-left: 30px;
+}
+
 #navbar > div > div:nth-child(1){
 	padding: 10px 20px 10px 70px;
 }
@@ -603,6 +607,7 @@ header.navbar-default{
 				    -o-transition: all 0.3s;
 				    transition: all 0.3s;
 				    height: 79px !important;
+				    margin-left: 0 !important;
 				}
 			}
 			a:nth-child(2){
