--- a/docroot/sites/all/themes/hwc_frontend/less/header.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/header.less
@@ -142,7 +142,7 @@ header.navbar-default{
 			.header-text:lang(pt),
 			.header-text:lang(fi),
 			.header-text:lang(ro){
-				font-size: 1.25em;
+				font-size: 1.25em !important;
 				padding-left: 1em;
 			}
 			
