--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
@@ -262,6 +262,21 @@
 }
 
 @media (max-width: 370px) { 
+
+	header.navbar-default .campaigns-header .navbar-header .col-xs-12.col-sm-9 img:nth-child(3) {
+	    position: absolute;
+    	right: 5px;
+	}
+
+	header.navbar-default .campaigns-header .navbar-header .col-xs-12.col-sm-9 a.pull-left {
+	    margin: 2rem 0em 0 0;
+	}
+
+	header.navbar-default .campaigns-header .navbar-header .col-xs-12.col-sm-9 a img.pull-left {
+	    height: 55px;
+	}
+
+
 	.how-to-apply{ 
 		> div.boxes{ 
 			> div:nth-child(1), > div:nth-child(2), > div:nth-child(3){
@@ -306,4 +321,8 @@
 	body.front-page .main-container .newsletter-social-media #block-osha-newsletter-osha-newsletter-image{
 		padding: 0;
 	}
+
+
+
+
 }
