--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -346,16 +346,10 @@
 				.col-xs-12.col-sm-9{
 					a{
 						margin-top: 1rem !important;
-						img{
-							&.pull-left{
-								height:48px !important;
-								margin-top: 18px !important;
-							}
-						}
 					}
 					img{
 						&:nth-child(3){
-					    margin: 49px 0 0 5px!important;
+					    margin: 10px 0 0 20px!important;
 					    height: 28px !important;
 						}
 					}
@@ -1372,6 +1366,34 @@
 	body.page-tools-and-publications-practical-tools {
 		.region.region-content .view-content .views-row .views-field-body{
 			padding-bottom: 130px;
+		}
+	}
+}
+
+@media (max-width: 769px) {
+header.navbar-default{
+		.campaigns-header{
+			.navbar-header{
+				.header-text:lang(bg),
+				.header-text:lang(da),
+				.header-text:lang(el),
+				.header-text:lang(de),
+				.header-text:lang(et),
+				.header-text:lang(fr),
+				.header-text:lang(hr),
+				.header-text:lang(is),
+				.header-text:lang(it),
+				.header-text:lang(lv),
+				.header-text:lang(hu),
+				.header-text:lang(mt),
+				.header-text:lang(no),
+				.header-text:lang(pl),
+				.header-text:lang(pt),
+				.header-text:lang(fi),
+				.header-text:lang(ro){
+					font-size: 0.9em !important;
+				}
+			}
 		}
 	}
 }
