--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -8778,12 +8778,16 @@ header.navbar-default.sticky-menu{
 				    height: 80px;
 				    display: flex;
 				    align-items: center;
+				    max-width: 363px !important;
+    				width: 363px !important;
+    				span{
+    					padding-left: 1em;
+    				}
 				}
 			}
 		}
 	}
 }
-
 
 html:lang(el),
 html:lang(pl)
