--- a/docroot/sites/all/themes/hwc_frontend/less/responsive-max-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/responsive-max-1200.less
@@ -10,15 +10,12 @@ header{
 					padding-right: 1em;
 					margin-right: 1em;
 				}
-				a img.pull-left{
-					width: 150px;
-				}
 				img:nth-child(3){
 					width: 70px;
 					padding-right: 1em !important;
 				}
 				.header-text{
-				    font-size: @size2;
+				    font-size: 17px;
 				    width: 238px;
 				    padding-top: 1em;
 				    padding-left: 0.8em;
