--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -538,6 +538,13 @@
 
 @media (max-width: 1391px) {
 
+	
+	html:lang(es), html:lang(mt){
+		body.rel1 header.navbar-default .campaigns-header .navbar-header .header-text {
+		    max-width: 316px !important;
+		}
+	}
+
 	#navbar > div > div:nth-child(1){
 		padding: 10px 20px 10px 0px;
 	}
